--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
 @import 'common';
 
+@import 'modules/toolbar';
 @import 'modules/dropdown';
 @import 'modules/tooltip';
+@import 'modules/tab';
 @import 'modules/wrap';
 
 @import 'content/base';
