--- a/src/scss/content/_base.scss
+++ b/src/scss/content/_base.scss
@@ -10,6 +10,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
+  overflow: hidden !important;
   font-family: #{map-get(map-get($defaults, 'font-family'), 'regular')};
   line-height: #{map-get($defaults, 'base-font-size')/10*map-get($defaults, 'base-line-height')};
   background-color: #eee;
@@ -24,7 +25,7 @@ body {
 
 .container {
 
-  min-width: 800px;
+  //min-width: 800px;
 
 }
 
