--- a/src/scss/react/dashboard.scss
+++ b/src/scss/react/dashboard.scss
@@ -2,6 +2,7 @@ $dashboard: (
   'container': '.dashboard',
   'space': 3,
   'separator': 10,
+  'toolbarSize': 30,
 );
 
 @mixin setAbsSpace($value) {
@@ -15,30 +16,17 @@ $dashboard: (
 
   position: relative;
   padding: 15px;
-  height: 800px;
-
-}
-
-#{map-get($dashboard, 'container')}Window {
-
-  position: absolute;
-  @include setAbsSpace(#{map-get($dashboard, 'space')}px);
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-
+  height: 100%;
 }
 
 #{map-get($dashboard, 'container')}Separator {
 
   position: absolute;
   background-color: rgba(#ff00ff, 0.5);
-  z-index: 1;
+  z-index: 2;
 
-  #{map-get($dashboard, 'container')}Grid--col > #{map-get($dashboard, 'container')}Grid-item > &,
-  #{map-get($dashboard, 'container')}Grid--col > & {
+  #{map-get($dashboard, 'container')}Grid--col > #{map-get($dashboard, 'container')}Body > #{map-get($dashboard, 'container')}Grid-item > &,
+  #{map-get($dashboard, 'container')}Grid--col > #{map-get($dashboard, 'container')}Body > & {
 
     top: #{map-get($dashboard, 'space')}px;
     bottom: #{map-get($dashboard, 'space')}px;
@@ -48,8 +36,8 @@ $dashboard: (
 
   }
 
-  #{map-get($dashboard, 'container')}Grid--row > #{map-get($dashboard, 'container')}Grid-item > &,
-  #{map-get($dashboard, 'container')}Grid--row > & {
+  #{map-get($dashboard, 'container')}Grid--row > #{map-get($dashboard, 'container')}Body > #{map-get($dashboard, 'container')}Grid-item > &,
+  #{map-get($dashboard, 'container')}Grid--row > #{map-get($dashboard, 'container')}Body > & {
 
     left: #{map-get($dashboard, 'space')}px;
     right: #{map-get($dashboard, 'space')}px;
@@ -61,30 +49,35 @@ $dashboard: (
 
 }
 
+#{map-get($dashboard, 'container')}Body {
+
+  position: relative;
+  flex-grow: 1;
+
+}
+
 
 #{map-get($dashboard, 'container')}Toolbar {
 
-  position: absolute;
-  @include setAbsSpace(#{map-get($dashboard, 'space')}px);
-  bottom: auto;
-  opacity: 0;
-  transform: translate3d(0, -100%, 0);
+  position: relative;
+  //transform: translate3d(0, -100%, 0);
   transition: all 0.3s ease 0s;
   background-color: lightgreen;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   z-index: 1;
-  opacity: 1;
-  transform: none;
-  transform: translate3d(0, 10px, 0);;
 
-  #{map-get($dashboard, 'container')}Grid-item:hover > & {
+  //opacity: 1;
+  //transform: none;
+  //transform: translate3d(0, 10px, 0);
 
-    opacity: 1;
-    transform: translate3d(0, 10px, 0);
-
-  }
+  //#{map-get($dashboard, 'container')}Grid-item:hover > & {
+  //
+  //  opacity: 1;
+  //  transform: translate3d(0, 10px, 0);
+  //
+  //}
 
   &-item {
 
@@ -105,33 +98,12 @@ $dashboard: (
 
   position: absolute;
   @include setAbsSpace(0px);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
 
   &-item {
-
-    position: absolute;
-    right: auto;
-    background-color: #666;
-    transition: all 0.5s ease 0s;
-
-    #{map-get($dashboard, 'container')}Grid--col > & {
-
-      top: 0;
-      bottom: 0;
-
-      //&:first-child { left: 0; }
-      //&:last-child { right: 0; }
-
-    }
-
-    #{map-get($dashboard, 'container')}Grid--row > & {
-
-      left: 0;
-      right: 0;
-
-      //&:first-child { top: 0; }
-      //&:last-child { bottom: 0; }
-
-    }
 
     //@for $i from 1 through 10 {
     //
@@ -188,5 +160,60 @@ $dashboard: (
     //}
 
   }
+
+}
+
+#{map-get($dashboard, 'container')}GridItem {
+
+  position: absolute;
+  right: auto;
+  background-color: #666;
+  transition: all 0.5s ease 0s;
+
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+
+  & > #{map-get($dashboard, 'container')}Toolbar {
+
+    background-color: lightblue;
+
+  }
+
+  & > #{map-get($dashboard, 'container')}Window {
+
+    flex-grow: 1;
+
+  }
+
+
+  #{map-get($dashboard, 'container')}Grid--col > #{map-get($dashboard, 'container')}Body > & {
+
+    top: 0;
+    bottom: 0;
+    height: 100%;
+
+  }
+
+  #{map-get($dashboard, 'container')}Grid--row > #{map-get($dashboard, 'container')}Body > & {
+
+    left: 0;
+    right: 0;
+    width: 100%;
+
+  }
+
+}
+
+#{map-get($dashboard, 'container')}Window {
+
+  position: relative;
+  //@include setAbsSpace(#{map-get($dashboard, 'space')}px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(#fff, 0.5);
+  margin: 5px;
 
 }
