--- a/src/scss/config/_defaults.scss
+++ b/src/scss/config/_defaults.scss
@@ -3,7 +3,7 @@ $defaults: (
         'base-line-height'  : 1,
         'font-family' : (
                 'hand'    : 'rosamundaOne',
-                'regular' : 'robotoBlackItalic',
+                'regular' : 'robotoRegular',
                 'light'   : 'robotoLight',
                 'italic'  : 'robotoItalic',
                 'bold'    : 'robotoBold',
